--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+.table-box{
+    width: 100%;
+    height: 600px;
+    overflow-y: scroll;
+}
 table {
     width: 100%;
     border-collapse: collapse;
