--- a/style.css
+++ b/style.css
@@ -1,3 +1,33 @@
+a{
+    text-decoration: none;
+    color: inherit;
+}
+header{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+header h1{
+    width: 400px;
+    height: 100%;
+    text-align: center;
+    align-content: center;
+}
+header .btn-box{
+    width: 400px;
+    height: 100px;
+    text-align: center;
+    align-content: center;
+}
+header .btn-box button{
+    padding: 5px 10px;
+    margin: 5px;
+    border: 1px solid black;
+    background-color: #eee;
+    border-radius: 5px;
+}
 .table-box{
     width: 100%;
     height: 600px;
